<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">acacyc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	<string name="compra">ACACYC PNC, brinda una gran variedad de productos de calidad a todo personal que labora con la Policía Nacional Civil, los que pueden adquirir a bajos precios por medio de Órdenes de Compa sin ningún tipo de interés.</string>
   	<string name="requisitos">-> Ser empleado activo de la Policía Nacional Civil\n-> Presentar boleta de pago con antiguedad no mayor a 30 días\n-> Estar al día con los pagos de otros servicios ACACYC, si es asociado\n-> Presentar Documento de Identidad Personal(DUI)</string>
   	<string name="beneficios1">-> Las Órdenes de Compra son descontadas por planilla de salarios\n-> Crédito a 30 días y no generan ningún tipo de interés\n-> El asociado/a puede obtener crédito hasta el 25% de su salario liquido que registra en boleta de pago</string>
   	<string name="asociarse">Para asociarse a ACACYC PNC de R.L., debes visitar nuestras Oficinas Centrales o cualquiera de nuestras sucursales en Santa Ana, San Miguel, San Vicente, Chalatenango, Plantel SAF, o con cualquiera de nuestras promotoras.\n\nEl procedimiento que debe realizar, para asociarse a nuestra Cooperativa es el siguiemte: \n\n-> Llenar una solicitud de admisión.\n->Fotocopia de DUI y NIT.\n-> Entregar una fotografía tamaño Cedula.\n-> Cancelar $5.71 en concepto de Admisión o membresía.\n-> Dar una primera Aportación de $5.71.\n-> Una vez ya afiliado todo asociado tendrá la responsabilidad cada mes de dar la Cuota de aportación</string>
   	<string name="pago">Ahora pueden realizar los pagos de recibos por los servicios de: CAESS, AES, CLESA, EEO, DEUSEM Y TIGO, en todas nuestras sucursales de lunes a viernes de 8:30 a.m. a 4:00 p.m. y sabados de 8:00 a.m. a 12:00 md</string>
   	<string name="afiliarse">Pueden ser parte de la Gran Familia ACACYC PNC de R.L., toda persona que sea miembro activo de la Policía Nacional Civil de El Salvador, Academia de Seguridad Publica y los familiares en primer grado de consanguineidad y conyugue o conveniente del asociado/a. así tambíen los hermanos/as de los asociados/as.</string>
   	<string name="tramitar">Los asociados y asociadas de ACACYC PNC al ser miembros activos pueden solicitar cualquiera de nuestras líneas de crédito vigentes:\n\n-> Préstamos de Emergencia\n-> Crédito Decreciente\n-> Préstamo Gerencial\n-> Préstamo Personal\n-> Crédito Hipotecario\n-> billetín\n\nPueden hacerlo presentandose a cualquiera de nuestras seis sucursales en todo el país, tomando en cuenta que hay líneas de crédito ágil como lo son los créditos de emergencia, billetín, decreciente y gerencial, que pueden ser otrogados en un tiempo maximo de 30 minutos.\n\nPara poder hacer uso de ellos basta con ser asociado/a, tener al día sus aportaciones y presentarse a nuestras oficinas, llevar la documentación necesaria como DUI, NIT, Boleta de pago vigente y solicitar el crédito.</string>
    <string name="beneficios">los asociados/as de CACYC PNC pueden optar a una gama de servicios financieros entre ellos la apertura de cuentas de ahorro con las que pueden garantizar el crecimiento de su capital, ya que somos una institucion capaz de ofrecer las mejores tasas de interés del mercado a travéz de las cuentas a plazo, programado, infantil y corriente.</string>
   	<string name="fallecimiento">El asociado y asociada que sufra la pérdida de un familiar en primer grado de consanguinidad puede solicitar una ayuda por fallecimiento para gastos funerarios u otros gastos de emergencia, únicamente tiene que presentarse a cualquiera de nuestras sucursales financieras y presentar la siguiente documentacion:\n\n-> Partida de defunción del fallecido\n-> Partida de nacimiento del fallecido\n-> Fotocopia de DUI del fallecido (si fuese de mayor de edad)\-> Fotocopia de DUI, NIT Y Carnet policial del asociado/a\n\nEn el caso de conyugue el asociado de presentar fotocopia del acta de matrimonio y si no son casados partida de nacimiento de un hijo.</string>
    <string name="ayuda">Para el caso que lamentablemente uno de nuestros asociados fallezca sus beneficiarios pueden realizar el trámite para solicitar el Fondo de ayuda por fallecimiento el cual asciende a un valor de $3,000.00, para ello debe de presentarse a cualquiera de seis sucursales ACACYC con:\n\n-> Partida de defunción del fallecido o esquela original emitida por medicina legal\n-> Fotocopia de DUI del fallecido\n-> Fotocopia de DUI y NIT del solicitando/beneficiario\n\nEl fondo es entregado a los beneficiarios en un plazo de 5 días hábiles después de entregada la solicitud e información respectiva.</string>
   	
</resources>