<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:padding="20dp" >
    
			<LinearLayout
		  		    android:layout_width="wrap_content"
		  		    android:layout_height="wrap_content"
		  		    android:background="@drawable/search_bg_shadowww"
		  		    android:gravity="center"
		  		    android:layout_gravity="center"
		  		    android:minHeight="300dp"
		  		    android:orientation="vertical"
		  		    android:padding="40dip" >
		
		          <!--  Email Label -->
		         	<TextView
		        		android:id="@+id/title"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_centerHorizontal="true"
				        android:layout_gravity="center"
				        android:text="Ordenes de compra"
		        		android:textColor="#2f5284"
				        android:textSize="30dip"
				        android:textStyle="bold"
		        		android:typeface="sans" />
		         
		          	<TextView
		        		android:id="@+id/fecha"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_below="@+id/title"
				        android:layout_gravity="center"
				        android:layout_centerHorizontal="true"
		        		android:layout_marginTop="5dp"
		        		android:gravity="left"
		        		android:text="@string/compra"
		        		android:textColor="#005496"
		        		android:textSize="20dip" />
		          
		            <TextView
				        android:id="@+id/title"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_centerHorizontal="true"
		        		android:layout_gravity="left"
		        		android:layout_marginTop="5dp"
		        		android:text="Requisitos:"
		        		android:textColor="#2f5284"
		        		android:textSize="30dip"
		        		android:textStyle="bold"
		        		android:typeface="sans" />
			            
		            <TextView
		       			android:id="@+id/fecha"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_below="@+id/title"
		        		android:layout_gravity="left"
		        		android:layout_centerHorizontal="true"
		        		android:layout_marginTop="5dp"
		        		android:gravity="left"
		        		android:text="@string/requisitos"
		        		android:textColor="#005496"
		        		android:textSize="20dip" />
			            
		            <TextView
		        		android:id="@+id/title"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_centerHorizontal="true"
				        android:layout_gravity="left"
		        		android:layout_marginTop="5dp"
		        		android:text="los beneficios que tienen los empleados PNC:"
		        		android:textColor="#2f5284"
		        		android:textSize="30dip"
		        		android:textStyle="bold"
		        		android:typeface="sans" />
				            
		            <TextView
		        		android:id="@+id/fecha"
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:layout_below="@+id/title"
		        		android:layout_gravity="center"
		        		android:layout_centerHorizontal="true"
		        		android:layout_marginTop="5dp"
		        		android:gravity="left"
		        		android:text="@string/beneficios1"
		        		android:textColor="#005496"
		        		android:textSize="20dip" />
				</LinearLayout>
				
			 <Button
        android:id="@+id/atras"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:background="@drawable/btn_blue"
        android:layout_gravity="center_horizontal"
        android:text="Atras"
      
        android:textColor="#fff" />
    
</LinearLayout>